appId: com.mdaopay.app
---
- launchApp
- tapOn: "Получить"
- assertVisible: "QR"
- assertVisible: "Копировать адрес"
